Fixed some of the dropdown alignment

--- a/src/Views/Dialog/Components/DialogView.scss
+++ b/src/Views/Dialog/Components/DialogView.scss
@@ -4,6 +4,8 @@
 
 .formContent {
     margin-bottom: 20px;
+    width: 98%;
+    padding-left: 8px;
 }
 
 .boldFont {
